# nix-rust-template

./: .gitignore  .release-plz.toml  CHANGELOG.md  COVERAGE.md  Cargo.toml  flake.nix  om.toml  readme.md
.direnv/: flake-profile-4-link  flake-profile-5-link  flake-profile-6-link
.github/: pages_index.html
.github/workflows/: ci.yml
client/: CHANGELOG.md  Cargo.toml  index.html
client/src/: main.rs
server/: CHANGELOG.md  Cargo.toml
server/src/: main.rs
shared/: CHANGELOG.md  Cargo.toml
shared/src/: lib.rs
web/: CHANGELOG.md  Cargo.toml
web/src/: lib.rs
