[workspace]
resolver = "2"
members = [
  "shared",
  "client",
  "web",
  "server",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A rust and nix template repository."
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
documentation = "https://ocasazza.github.io/nix-rust-template/"
repository = "github.com/ocasazza/rust-nix-template"
homepage = "https://ocasazza.github.io/nix-rust-template/"
readme = "readme.md"
keywords = ["nix", "wasm", "javascript", "typescript"]

[workspace.metadata.crane]
name = "nix-rust-template"
version = "0.0.1"
