[package]
name = "nix-rust-template-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.4"
nix-rust-template-shared = { path = "../shared" }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
