[package]
name = "nix_rust_template-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nix_rust_template = { path = "../shared" }

# uncomment for a more complex axum + tokio based backend server
# axum = "0.8.4"
# tokio = { version = "1.46.1", features = ["full"] }
# tower-http = { version = "0.6", features = ["full"] }
