[package]
name = "nix-rust-template-web"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nix-rust-template-shared = { version = "0.0.1", path = "../shared" }
wasm-bindgen = "0.2"
